# CV_Task2

./: CMakeLists.txt  README.md
include/: QucikCvDemo.hpp
src/: main.cpp
tools/: presentation.cpp
